test/integration/bad/closures/no_keyword4.stan
model {
    array[] real foo(real x) {
        return {x};
    }
}